--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "celebrate": "^15.0.3",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
-    "firebase-admin": "^13.0.2"
+    "firebase-admin": "^13.0.2",
+    "node": "^23.8.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.8",
